# Sming

./: .gitmodules
Sming/: CMakeLists.txt  build.mk  gen_scripts.cmake.in  project.mk  sming.cmake  standalone_flash.cmake.in  toolchain.cmake
Sming/Arch/Esp8266/: build.mk
Sming/Arch/Esp8266/Components/esp8266/: startup.cpp
Sming/Arch/Esp8266/Components/esptool/: component.mk
Sming/Arch/Esp8266/Components/libsodium/: component.mk
Sming/Arch/Esp8266/Components/libsodium/.patches/: libsodium.patch
Sming/Arch/Esp8266/Components/rboot/.patches/: rboot.patch
Sming/Components/terminal/: component.mk
Sming/compiler/ld/: common_cmake.ld  rom.ld.in
samples/Basic_Blink/: CMakeLists.txt  bootstrap_cmake.sh
samples/Signed_OTA/: .gitignore  Makefile  component.mk  otagen.py  readme.md
samples/Signed_OTA/app/: FirmwareUpdateStream.cpp  FirmwareUpdateStream.h  FormDataRequest.cpp  FormDataRequest.h  MultipartResource.cpp  MultipartResource.h  WriteStream.h  application.cpp  ota_verification_key.h
samples/Signed_OTA/files/: index.htm  ledcontrol.htm  not-found.htm  updatecomplete.htm
tools/esptool2/: CMakeLists.txt
tools/spiffy/: CMakeLists.txt
